updated lg and knn for ordinal encoding of month.

--- a/model_knn.ipynb
+++ b/model_knn.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:28:30.673176Z",
-     "start_time": "2023-06-08T20:28:29.652119Z"
+     "end_time": "2023-06-08T20:46:59.236781Z",
+     "start_time": "2023-06-08T20:46:58.446534Z"
     }
    },
    "outputs": [],
@@ -48,8 +48,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:28:30.871797Z",
-     "start_time": "2023-06-08T20:28:30.676019Z"
+     "end_time": "2023-06-08T20:46:59.392401Z",
+     "start_time": "2023-06-08T20:46:59.239274Z"
     }
    }
   },
@@ -63,8 +63,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:28:32.723664Z",
-     "start_time": "2023-06-08T20:28:30.872682Z"
+     "end_time": "2023-06-08T20:47:00.173786Z",
+     "start_time": "2023-06-08T20:46:59.393511Z"
     }
    }
   },
@@ -77,37 +77,37 @@
     "    func=np.log1p, inverse_func=np.expm1, check_inverse=False\n",
     ")\n",
     "\n",
-    "order_mapping = [['0', '0.2', '0.4', '0.6', '0.8', '1']]\n",
+    "order_mapping = [['0', '0.2', '0.4', '0.6', '0.8', '1'], [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]]\n",
     "\n",
     "norm_and_one_hot_transforms = make_column_transformer(\n",
     "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
-    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY]),\n",
+    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY, Columns.MONTH]),\n",
     "    (Normalizer(), make_column_selector(dtype_include=\"number\"))\n",
     ")\n",
     "\n",
     "log_and_ordinal_transforms = make_column_transformer(\n",
     "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
-    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY]),\n",
+    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY, Columns.MONTH]),\n",
     "    (log_transform, make_column_selector(dtype_include=\"number\"))\n",
     ")\n",
     "\n",
     "power_transforms = make_column_transformer(\n",
     "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
-    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY]),\n",
+    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY, Columns.MONTH]),\n",
     "    (PowerTransformer(), make_column_selector(dtype_include=\"number\"))\n",
     ")\n",
     "\n",
     "robust_transformation = make_column_transformer(\n",
     "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
-    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY]),\n",
+    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY, Columns.MONTH]),\n",
     "    (RobustScaler(), make_column_selector(dtype_include=\"number\"))\n",
     ")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:28:32.733665Z",
-     "start_time": "2023-06-08T20:28:32.730370Z"
+     "end_time": "2023-06-08T20:47:00.180516Z",
+     "start_time": "2023-06-08T20:47:00.173274Z"
     }
    }
   },
@@ -123,8 +123,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:28:32.738854Z",
-     "start_time": "2023-06-08T20:28:32.734997Z"
+     "end_time": "2023-06-08T20:47:00.185350Z",
+     "start_time": "2023-06-08T20:47:00.183281Z"
     }
    }
   },
@@ -139,8 +139,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:28:32.743681Z",
-     "start_time": "2023-06-08T20:28:32.740228Z"
+     "end_time": "2023-06-08T20:47:00.190421Z",
+     "start_time": "2023-06-08T20:47:00.187025Z"
     }
    }
   },
@@ -155,8 +155,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:28:32.752668Z",
-     "start_time": "2023-06-08T20:28:32.744786Z"
+     "end_time": "2023-06-08T20:47:00.197794Z",
+     "start_time": "2023-06-08T20:47:00.191516Z"
     }
    }
   },
@@ -177,14 +177,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:28:32.753040Z",
-     "start_time": "2023-06-08T20:28:32.749981Z"
+     "end_time": "2023-06-08T20:47:00.202822Z",
+     "start_time": "2023-06-08T20:47:00.195583Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "column_transformation_tune = {\n",
@@ -251,14 +251,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:29:38.421524Z",
-     "start_time": "2023-06-08T20:29:38.412723Z"
+     "end_time": "2023-06-08T20:47:00.205642Z",
+     "start_time": "2023-06-08T20:47:00.202649Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -269,17 +269,20 @@
       "                                ('ordinalencoder',\n",
       "                                 OrdinalEncoder(categories=[['0', '0.2', '0.4',\n",
       "                                                             '0.6', '0.8',\n",
-      "                                                             '1']]),\n",
-      "                                 ['SpecificHoliday']),\n",
+      "                                                             '1'],\n",
+      "                                                            [1, 2, 3, 4, 5, 6,\n",
+      "                                                             7, 8, 9, 10, 11,\n",
+      "                                                             12]]),\n",
+      "                                 ['SpecificHoliday', 'Month']),\n",
       "                                ('powertransformer', PowerTransformer(),\n",
-      "                                 <sklearn.compose._column_transformer.make_column_selector object at 0x1353cf370>)]),\n",
+      "                                 <sklearn.compose._column_transformer.make_column_selector object at 0x13c003280>)]),\n",
       "    'knn__n_neighbors': 19,\n",
       "    'knn__p': 1,\n",
       "    'knn__weights': 'uniform',\n",
       "    'over_sampling': ADASYN(random_state=123, sampling_strategy=0.3),\n",
       "    'over_sampling__sampling_strategy': 0.3,\n",
       "    'under_sampling': TomekLinks()}\n",
-      "Best parameter (CV score: 0.630):\n"
+      "Best parameter (CV score: 0.636):\n"
      ]
     }
    ],
@@ -300,21 +303,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:29:45.546971Z",
-     "start_time": "2023-06-08T20:29:39.170784Z"
+     "end_time": "2023-06-08T20:47:06.320629Z",
+     "start_time": "2023-06-08T20:47:00.206677Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
-      "text/plain": "                             Metric for Training Set     Score\n0                                fit_time mean score  0.273070\n1                              score_time mean score  0.156337\n2                      5-fold CV F1 Score mean score  0.629626\n3                      5-fold CV Accuracy mean score  0.874334\n4             5-fold CV Balanced Accuracy mean score  0.796592\n5  5-fold CV Matthew's Correlation Coefficient me...  0.557510",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Training Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>fit_time mean score</td>\n      <td>0.273070</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>score_time mean score</td>\n      <td>0.156337</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5-fold CV F1 Score mean score</td>\n      <td>0.629626</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5-fold CV Accuracy mean score</td>\n      <td>0.874334</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5-fold CV Balanced Accuracy mean score</td>\n      <td>0.796592</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5-fold CV Matthew's Correlation Coefficient me...</td>\n      <td>0.557510</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                             Metric for Training Set     Score\n0                                fit_time mean score  0.256012\n1                              score_time mean score  0.137685\n2                      5-fold CV F1 Score mean score  0.635646\n3                      5-fold CV Accuracy mean score  0.879352\n4             5-fold CV Balanced Accuracy mean score  0.795555\n5  5-fold CV Matthew's Correlation Coefficient me...  0.565481",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Training Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>fit_time mean score</td>\n      <td>0.256012</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>score_time mean score</td>\n      <td>0.137685</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5-fold CV F1 Score mean score</td>\n      <td>0.635646</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5-fold CV Accuracy mean score</td>\n      <td>0.879352</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5-fold CV Balanced Accuracy mean score</td>\n      <td>0.795555</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5-fold CV Matthew's Correlation Coefficient me...</td>\n      <td>0.565481</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,21 +333,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:29:50.232431Z",
-     "start_time": "2023-06-08T20:29:48.060206Z"
+     "end_time": "2023-06-08T20:47:08.313953Z",
+     "start_time": "2023-06-08T20:47:06.322324Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
-      "text/plain": "              Metric for Testing Set     Score\n0                           F1 Score  0.649123\n1                           Accuracy  0.885293\n2                  Balanced Accuracy  0.780928\n3  Matthew's Correlation Coefficient  0.581465",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Testing Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>F1 Score</td>\n      <td>0.649123</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Accuracy</td>\n      <td>0.885293</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Balanced Accuracy</td>\n      <td>0.780928</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Matthew's Correlation Coefficient</td>\n      <td>0.581465</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "              Metric for Testing Set     Score\n0                           F1 Score  0.650694\n1                           Accuracy  0.886522\n2                  Balanced Accuracy  0.783327\n3  Matthew's Correlation Coefficient  0.583615",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Testing Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>F1 Score</td>\n      <td>0.650694</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Accuracy</td>\n      <td>0.886522</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Balanced Accuracy</td>\n      <td>0.783327</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Matthew's Correlation Coefficient</td>\n      <td>0.583615</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,33 +358,33 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:29:50.787517Z",
-     "start_time": "2023-06-08T20:29:50.235091Z"
+     "end_time": "2023-06-08T20:47:08.896765Z",
+     "start_time": "2023-06-08T20:47:08.313757Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:29:50.791392Z",
-     "start_time": "2023-06-08T20:29:50.788172Z"
+     "end_time": "2023-06-08T20:47:08.900530Z",
+     "start_time": "2023-06-08T20:47:08.897619Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
       "text/plain": "['./models_exports/knn_classifier.joblib']"
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,31 +395,35 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:29:50.834537Z",
-     "start_time": "2023-06-08T20:29:50.794830Z"
+     "end_time": "2023-06-08T20:47:08.928102Z",
+     "start_time": "2023-06-08T20:47:08.907444Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-08T20:28:59.750653Z",
-     "start_time": "2023-06-08T20:28:59.744476Z"
+     "end_time": "2023-06-08T20:47:08.932301Z",
+     "start_time": "2023-06-08T20:47:08.922430Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-08T20:47:08.941851Z",
+     "start_time": "2023-06-08T20:47:08.926973Z"
+    }
    }
   }
  ],
