--- a/model_logistic_regression.ipynb
+++ b/model_logistic_regression.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T23:44:00.995443Z",
-     "start_time": "2023-06-07T23:44:00.063668Z"
+     "end_time": "2023-06-08T20:44:30.550852Z",
+     "start_time": "2023-06-08T20:44:29.658420Z"
     }
    },
    "outputs": [],
@@ -25,8 +25,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T23:44:01.841432Z",
-     "start_time": "2023-06-07T23:44:00.998374Z"
+     "end_time": "2023-06-08T20:44:30.713900Z",
+     "start_time": "2023-06-08T20:44:30.555023Z"
     }
    },
    "outputs": [],
@@ -56,8 +56,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T23:44:02.485788Z",
-     "start_time": "2023-06-07T23:44:01.842240Z"
+     "end_time": "2023-06-08T20:44:32.498802Z",
+     "start_time": "2023-06-08T20:44:30.715050Z"
     }
    },
    "outputs": [],
@@ -74,32 +74,32 @@
     "    func=np.log1p, inverse_func=np.expm1, check_inverse=False\n",
     ")\n",
     "\n",
-    "order_mapping = [['0', '0.2', '0.4', '0.6', '0.8', '1']]\n",
+    "order_mapping = [['0', '0.2', '0.4', '0.6', '0.8', '1'], [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]]\n",
     "\n",
     "norm_and_one_hot_transforms = make_column_transformer(\n",
     "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
-    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY]),\n",
+    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY, Columns.MONTH]),\n",
     "    (\"drop\", [Columns.INFO_PAGE_TIME, Columns.PRODUCT_PAGE_TIME, Columns.GOOGLE_ANALYTICS_ER]),\n",
     "    (Normalizer(), make_column_selector(dtype_include=\"number\"))\n",
     ")\n",
     "\n",
     "log_and_ordinal_transforms = make_column_transformer(\n",
     "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
-    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY]),\n",
+    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY, Columns.MONTH]),\n",
     "    (\"drop\", [Columns.INFO_PAGE_TIME, Columns.PRODUCT_PAGE_TIME, Columns.GOOGLE_ANALYTICS_ER]),\n",
     "    (log_transform, make_column_selector(dtype_include=\"number\"))\n",
     ")\n",
     "\n",
     "power_transforms = make_column_transformer(\n",
     "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
-    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY]),\n",
+    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY, Columns.MONTH]),\n",
     "    (\"drop\", [Columns.INFO_PAGE_TIME, Columns.PRODUCT_PAGE_TIME, Columns.GOOGLE_ANALYTICS_ER]),\n",
     "    (PowerTransformer(), make_column_selector(dtype_include=\"number\"))\n",
     ")\n",
     "\n",
     "robust_transformation = make_column_transformer(\n",
     "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
-    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY]),\n",
+    "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY, Columns.MONTH]),\n",
     "    (\"drop\", [Columns.INFO_PAGE_TIME, Columns.PRODUCT_PAGE_TIME, Columns.GOOGLE_ANALYTICS_ER]),\n",
     "    (RobustScaler(), make_column_selector(dtype_include=\"number\"))\n",
     ")"
@@ -107,8 +107,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-07T23:44:02.495802Z",
-     "start_time": "2023-06-07T23:44:02.492719Z"
+     "end_time": "2023-06-08T20:44:32.509557Z",
+     "start_time": "2023-06-08T20:44:32.499471Z"
     }
    }
   },
@@ -126,8 +126,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-07T23:44:02.504273Z",
-     "start_time": "2023-06-07T23:44:02.499763Z"
+     "end_time": "2023-06-08T20:44:32.516534Z",
+     "start_time": "2023-06-08T20:44:32.513043Z"
     }
    }
   },
@@ -145,8 +145,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-07T23:44:02.511581Z",
-     "start_time": "2023-06-07T23:44:02.505251Z"
+     "end_time": "2023-06-08T20:44:32.524151Z",
+     "start_time": "2023-06-08T20:44:32.518275Z"
     }
    }
   },
@@ -167,8 +167,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-07T23:44:02.518365Z",
-     "start_time": "2023-06-07T23:44:02.510526Z"
+     "end_time": "2023-06-08T20:44:32.530638Z",
+     "start_time": "2023-06-08T20:44:32.524365Z"
     }
    }
   },
@@ -253,8 +253,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-07T23:44:02.522707Z",
-     "start_time": "2023-06-07T23:44:02.519230Z"
+     "end_time": "2023-06-08T20:44:32.536573Z",
+     "start_time": "2023-06-08T20:44:32.528088Z"
     }
    }
   },
@@ -271,13 +271,16 @@
       "                                ('ordinalencoder',\n",
       "                                 OrdinalEncoder(categories=[['0', '0.2', '0.4',\n",
       "                                                             '0.6', '0.8',\n",
-      "                                                             '1']]),\n",
-      "                                 ['SpecificHoliday']),\n",
+      "                                                             '1'],\n",
+      "                                                            [1, 2, 3, 4, 5, 6,\n",
+      "                                                             7, 8, 9, 10, 11,\n",
+      "                                                             12]]),\n",
+      "                                 ['SpecificHoliday', 'Month']),\n",
       "                                ('drop', 'drop',\n",
       "                                 ['Info_Page_Time', 'ProductPage_Time',\n",
       "                                  'GoogleAnalytics_ER']),\n",
       "                                ('powertransformer', PowerTransformer(),\n",
-      "                                 <sklearn.compose._column_transformer.make_column_selector object at 0x13eeab070>)]),\n",
+      "                                 <sklearn.compose._column_transformer.make_column_selector object at 0x13907f2b0>)]),\n",
       "    'logistic_regression__C': 0.1,\n",
       "    'logistic_regression__class_weight': {0: 0.4, 1: 0.6},\n",
       "    'logistic_regression__penalty': 'l2',\n",
@@ -285,7 +288,7 @@
       "    'over_sampling': SMOTE(random_state=123, sampling_strategy=0.5),\n",
       "    'over_sampling__sampling_strategy': 0.5,\n",
       "    'under_sampling': 'passthrough'}\n",
-      "Best parameter (CV score: 0.663):\n"
+      "Best parameter (CV score: 0.664):\n"
      ]
     }
    ],
@@ -306,8 +309,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-07T23:44:16.489876Z",
-     "start_time": "2023-06-07T23:44:02.526391Z"
+     "end_time": "2023-06-08T20:44:47.336666Z",
+     "start_time": "2023-06-08T20:44:32.539994Z"
     }
    }
   },
@@ -324,8 +327,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-07T23:44:16.496012Z",
-     "start_time": "2023-06-07T23:44:16.491187Z"
+     "end_time": "2023-06-08T20:44:47.342680Z",
+     "start_time": "2023-06-08T20:44:47.338843Z"
     }
    }
   },
@@ -335,8 +338,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "                             Metric for Training Set     Score\n0                                fit_time mean score  0.223249\n1                              score_time mean score  0.016042\n2                      5-fold CV F1 Score mean score  0.663270\n3                      5-fold CV Accuracy mean score  0.873719\n4             5-fold CV Balanced Accuracy mean score  0.841874\n5  5-fold CV Matthew's Correlation Coefficient me...  0.600981",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Training Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>fit_time mean score</td>\n      <td>0.223249</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>score_time mean score</td>\n      <td>0.016042</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5-fold CV F1 Score mean score</td>\n      <td>0.663270</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5-fold CV Accuracy mean score</td>\n      <td>0.873719</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5-fold CV Balanced Accuracy mean score</td>\n      <td>0.841874</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5-fold CV Matthew's Correlation Coefficient me...</td>\n      <td>0.600981</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                             Metric for Training Set     Score\n0                                fit_time mean score  0.206753\n1                              score_time mean score  0.015386\n2                      5-fold CV F1 Score mean score  0.663604\n3                      5-fold CV Accuracy mean score  0.873924\n4             5-fold CV Balanced Accuracy mean score  0.841995\n5  5-fold CV Matthew's Correlation Coefficient me...  0.601353",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Training Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>fit_time mean score</td>\n      <td>0.206753</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>score_time mean score</td>\n      <td>0.015386</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5-fold CV F1 Score mean score</td>\n      <td>0.663604</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5-fold CV Accuracy mean score</td>\n      <td>0.873924</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5-fold CV Balanced Accuracy mean score</td>\n      <td>0.841995</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5-fold CV Matthew's Correlation Coefficient me...</td>\n      <td>0.601353</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "execution_count": 11,
      "metadata": {},
@@ -349,8 +352,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-07T23:44:17.718958Z",
-     "start_time": "2023-06-07T23:44:16.498258Z"
+     "end_time": "2023-06-08T20:44:48.478165Z",
+     "start_time": "2023-06-08T20:44:47.344544Z"
     }
    }
   },
@@ -360,8 +363,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "              Metric for Testing Set     Score\n0                           F1 Score  0.679330\n1                           Accuracy  0.882425\n2                  Balanced Accuracy  0.776068\n3  Matthew's Correlation Coefficient  0.619154",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Testing Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>F1 Score</td>\n      <td>0.679330</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Accuracy</td>\n      <td>0.882425</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Balanced Accuracy</td>\n      <td>0.776068</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Matthew's Correlation Coefficient</td>\n      <td>0.619154</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "              Metric for Testing Set     Score\n0                           F1 Score  0.676372\n1                           Accuracy  0.881606\n2                  Balanced Accuracy  0.774774\n3  Matthew's Correlation Coefficient  0.615367",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Testing Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>F1 Score</td>\n      <td>0.676372</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Accuracy</td>\n      <td>0.881606</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Balanced Accuracy</td>\n      <td>0.774774</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Matthew's Correlation Coefficient</td>\n      <td>0.615367</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "execution_count": 12,
      "metadata": {},
@@ -374,8 +377,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-07T23:44:18.016519Z",
-     "start_time": "2023-06-07T23:44:17.721630Z"
+     "end_time": "2023-06-08T20:44:48.770850Z",
+     "start_time": "2023-06-08T20:44:48.479071Z"
     }
    }
   },
@@ -398,8 +401,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-07T23:44:18.031832Z",
-     "start_time": "2023-06-07T23:44:18.018705Z"
+     "end_time": "2023-06-08T20:44:48.784346Z",
+     "start_time": "2023-06-08T20:44:48.771559Z"
     }
    }
   },
@@ -411,8 +414,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-07T23:44:18.076020Z",
-     "start_time": "2023-06-07T23:44:18.038415Z"
+     "end_time": "2023-06-08T20:44:48.830290Z",
+     "start_time": "2023-06-08T20:44:48.791121Z"
     }
    }
   }
